# flux

./: .gitignore  WORKSPACE.bazel
app/: BUILD.bazel
app/src/main/: AndroidManifest.xml
bazel/: defs.bzl
common/: BUILD.bazel
common/src/main/: AndroidManifest.xml
data/: BUILD.bazel
data/src/main/: AndroidManifest.xml
domain/: BUILD.bazel
domain/src/main/: AndroidManifest.xml
presentation/: BUILD.bazel
presentation/src/main/: AndroidManifest.xml
