workspace(name = "flux")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

rules_kotlin_version = "1.7.1"
rules_kotlin_sha = "fd92a98bd8a8f0e1cdcb490b93f5acef1f1727ed992571232d33de42395ca9b3"
http_archive(
    name = "io_bazel_rules_kotlin",
    urls = ["https://github.com/bazelbuild/rules_kotlin/releases/download/v%s/rules_kotlin_release.tgz" % rules_kotlin_version],
    sha256 = rules_kotlin_sha,
)

load("@io_bazel_rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories", "versions")
kotlin_repositories() # if you want the default. Otherwise see custom kotlinc distribution below

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_register_toolchains")
#kt_register_toolchains() # to use the default toolchain, otherwise see toolchains below
register_toolchains("//bazel:experimental_toolchain")


http_archive(
    name = "rules_jvm_external",
    sha256 = versions.RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % versions.RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % versions.RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "androidx.activity:activity-compose:1.3.0-alpha04",
        "androidx.appcompat:appcompat:1.0.0",
        "androidx.appcompat:appcompat:1.3.0-beta01",
        "androidx.compose.animation:animation:1.0.0-beta02",
        "androidx.compose.foundation:foundation-layout:1.0.0-beta02",
        "androidx.compose.foundation:foundation:1.0.0-beta02",
        "androidx.compose.material:material-icons-extended:1.0.0-beta02",
        "androidx.compose.material:material:1.0.0-beta02",
        "androidx.compose.runtime:runtime:1.0.0-beta02",
        "androidx.compose.ui:ui-tooling:1.0.0-beta02",
        "androidx.compose.ui:ui-util:1.0.0-beta02",
        "androidx.compose.ui:ui:1.0.0-beta02",
        "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03",
        "androidx.core:core-ktx:1.5.0-beta01",
        "androidx.hilt:hilt-navigation-compose:1.0.0-alpha01",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0",
        "androidx.navigation:navigation-compose:1.0.0-alpha09",
        "androidx.test.espresso:espresso-core:3.1.1",
        "com.google.android.material:material:1.3.0",
        "com.google.auto.value:auto-value-annotations:1.6.5",
        "com.google.auto.value:auto-value:1.6.5",
        "com.google.dagger:dagger-compiler:2.45",
        "com.google.dagger:dagger-producers:2.45",
        "com.google.dagger:dagger:2.45",
        "com.google.dagger:hilt-android:2.33-beta",
        "com.squareup.moshi:moshi-kotlin-codegen:1.14.0",
        "com.squareup.moshi:moshi-kotlin:1.14.0",
        "com.squareup.moshi:moshi:1.14.0",
        "dev.chrisbanes.accompanist:accompanist-coil:0.6.0",
        "dev.chrisbanes.accompanist:accompanist-insets:0.6.0",
        "junit:junit:4.12",
        "org.hamcrest:hamcrest-library:1.3",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2",
        "org.jetbrains.kotlinx:kotlinx-serialization-runtime:1.0-M1-1.4.0-rc",
        "org.robolectric:robolectric:4.8.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)

http_archive(
    name = "build_bazel_rules_android",
    sha256 = versions.ANDROID.SHA,
    strip_prefix = "rules_android-%s" % versions.ANDROID.VERSION,
    urls = ["https://github.com/bazelbuild/rules_android/archive/v%s.zip" % versions.ANDROID.VERSION],
)

load(
    "@build_bazel_rules_android//android:rules.bzl",
    "android_sdk_repository",
)

android_sdk_repository(name = "androidsdk")
