workspace(name = "flux")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

rules_kotlin_version = "1.7.1"
rules_kotlin_sha = "fd92a98bd8a8f0e1cdcb490b93f5acef1f1727ed992571232d33de42395ca9b3"
http_archive(
    name = "io_bazel_rules_kotlin",
    urls = ["https://github.com/bazelbuild/rules_kotlin/releases/download/v%s/rules_kotlin_release.tgz" % rules_kotlin_version],
    sha256 = rules_kotlin_sha,
)

load("@io_bazel_rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories", "versions")
kotlin_repositories() # if you want the default. Otherwise see custom kotlinc distribution below

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_register_toolchains")
#kt_register_toolchains() # to use the default toolchain, otherwise see toolchains below
register_toolchains("//bazel:experimental_toolchain")


http_archive(
    name = "rules_jvm_external",
    sha256 = versions.RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % versions.RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % versions.RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "androidx.activity:activity-compose:VERSION",

        "androidx.appcompat:appcompat:VERSION",

        "androidx.compose.animation:animation-core:VERSION",
        "androidx.compose.animation:animation:VERSION",
        "androidx.compose.foundation:foundation-layout:VERSION",
        "androidx.compose.foundation:foundation:VERSION",
        "androidx.compose.material:material-icons-core:VERSION",
        "androidx.compose.material:material-icons-extended:VERSION",
        "androidx.compose.material:material:VERSION",
        "androidx.compose.runtime:runtime:VERSION",
        "androidx.compose.ui:ui-geometry:VERSION",
        "androidx.compose.ui:ui-graphics:VERSION",
        "androidx.compose.ui:ui-text:VERSION",
        "androidx.compose.ui:ui-tooling:VERSION",
        "androidx.compose.ui:ui-unit:VERSION",
        "androidx.compose.ui:ui-util:VERSION",
        "androidx.compose.ui:ui:VERSION",

        "androidx.constraintlayout:constraintlayout-compose:VERSION",

        "androidx.core:core-ktx:VERSION",
        "androidx.core:core:VERSION",

        "androidx.hilt:hilt-navigation-compose:VERSION",

        "androidx.lifecycle:lifecycle-runtime-ktx:VERSION", # formerly 2.3.0
        "androidx.lifecycle:lifecycle-viewmodel-compose:VERSION",

        "androidx.navigation:navigation-compose:VERSION",

        "androidx.test.espresso:espresso-core:VERSION",

        "com.google.android.material:material:VERSION",

        #"com.google.auto.value:auto-value-annotations:VERSION",
        #"com.google.auto.value:auto-value:VERSION",

        #"com.google.dagger:dagger-compiler:VERSION",
        #"com.google.dagger:dagger-producers:VERSION",
        #"com.google.dagger:dagger:VERSION",
        #"com.google.dagger:hilt-android:VERSION",

        #"com.squareup.moshi:moshi-kotlin-codegen:VERSION",
        #"com.squareup.moshi:moshi-kotlin:VERSION",
        #"com.squareup.moshi:moshi:VERSION",

        "dev.chrisbanes.accompanist:accompanist-coil:VERSION",
        "dev.chrisbanes.accompanist:accompanist-insets:VERSION",

        #"junit:junit:VERSION",

        #"org.hamcrest:hamcrest-library:VERSION",

        #"org.jetbrains.kotlin:kotlin-stdlib-jdk8:VERSION",
        #"org.jetbrains.kotlinx:kotlinx-coroutines-android:VERSION",
        #"org.jetbrains.kotlinx:kotlinx-coroutines-core:VERSION",
        #"org.jetbrains.kotlinx:kotlinx-serialization-runtime:VERSION",

        #"org.robolectric:robolectric:VERSION",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)


http_archive(
    name = "build_bazel_rules_android",
    sha256 = versions.ANDROID.SHA,
    strip_prefix = "rules_android-%s" % versions.ANDROID.VERSION,
    urls = ["https://github.com/bazelbuild/rules_android/archive/v%s.zip" % versions.ANDROID.VERSION],
)

load(
    "@build_bazel_rules_android//android:rules.bzl",
    "android_sdk_repository",
)

android_sdk_repository(name = "androidsdk")
