load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

#kt_android_library(
#    name = "common",
#    #srcs = glob(["src/main/java/**/*.kt"]),
#    srcs = [],
#    custom_package = "com.fidloo.flux.common",
#    manifest = "src/main/AndroidManifest.xml",
#    plugins = [],
#    resource_files = glob(["src/main/res/**"]),
#    visibility = ["//visibility:public"],
#    #deps = [],
#)
